# advertwise

./: .gitignore  MVP_BEF_ (AdvertWise).md  MVP_BEF_(AdvertWise).md  MVP_PRD_(AdvertWise).md  MVP_TDD_(AdvertWise).md  _clientq  docker-compose.yml
backend/: README.md  _check_vision.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  arq_worker_a.py  arq_worker_b.py  auth.py  gateway.py  infra_gateway.py  infra_redis.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/broll/: __init__.py  library.json  planner.py
backend/app/core/: exceptions.py
backend/app/dlq/: __init__.py
backend/app/gateway/: __init__.py
backend/app/guards/: __init__.py  compliance_gate.py  cost_guard.py  output_guard.py
backend/app/lua/: circuit_breaker.lua  wallet_consume.lua  wallet_lock.lua  wallet_refund.lua
backend/app/luts/: natural_green.cube
backend/app/migrations/: 001_initial.sql
backend/app/models/: __init__.py  schemas.py
backend/app/prompts/: framework-router.v1_0_0.yaml  script-generate.v1_0_0.yaml
backend/app/routes/: generations.py
backend/app/schemas/: enums.py
backend/app/services/: cost_guard.py  prompt_catalog.py
backend/app/static/: dev_ui.html  test_full.html  test_phase4.html
backend/app/takedown/: __init__.py
backend/app/types/: __init__.py  frameworks.py  script.py
backend/app/workers/: __init__.py  compose.py  copilot.py  copy.py  critic.py  export.py  i2v.py  phase2_chain.py  phase4_coordinator.py  reflect.py  safety.py  strategist.py  tts.py  worker_extract.py
backend/tests/: test_chat_chain_order.py
(+36 files in other folders)
